Stupid fix for missing ynlib

--- a/Space Bar 30-day Trial.glyphsReporter/Contents/Info.plist
+++ b/Space Bar 30-day Trial.glyphsReporter/Contents/Info.plist
@@ -19,15 +19,13 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.9</string>
+	<string>0.901</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.9 beta</string>
+	<string>0.901 beta</string>
 	<key>UpdateFeedURL</key>
 	<string>____OnlineUrlToThisPlist____</string>
 	<key>productPageURL</key>
-	<string>____ProductPageURL____</string>
-	<key>productReleaseNotes</key>
-	<string>____LatestReleaseNotes____</string>
+	<string>https://yanone.de/software/spacebar/</string>
 	<key>LSHasLocalizedDisplayName</key>
 	<false/>
 	<key>NSAppleScriptEnabled</key>
