--- a/Space Bar 30-day Trial.glyphsReporter/Contents/Info.plist
+++ b/Space Bar 30-day Trial.glyphsReporter/Contents/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>???</string>
 	<key>CFBundleVersion</key>
 	<string>0.901</string>
 	<key>CFBundleShortVersionString</key>
