--- a/Space Bar 30-day Trial.glyphsReporter/Contents/Info.plist
+++ b/Space Bar 30-day Trial.glyphsReporter/Contents/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.02</string>
 	<key>UpdateFeedURL</key>
-	<string>https://yanone.de/buy/?page=versionInformation&amp;product=spacebarglyphs&amp;format=GlyphsInfoPlist</string>
+	<string>https://yanone.de/buy/?page=versionInformation&amp;product=spacebarglyphs&amp;format=GlyphsInfoPlist&amp;trialVersion=yes</string>
 	<key>productPageURL</key>
 	<string>https://yanone.de/software/spacebar/</string>
 	<key>LSHasLocalizedDisplayName</key>
